# ffiapi

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md
common/cpp/api/: CMakeLists.txt
common/cpp/api/include/ffiapi/: common.hpp
common/cpp/api/testing/: CMakeLists.txt  main.cpp  testing.hpp
common/rust/imp/: Cargo.toml
common/rust/imp/src/: lib.rs
cpp-api/: CMakeLists.txt
cpp-api/ffiapi/: test-main.cpp  v1.cpp  v1.hpp
cpp-api/ffiapi/v1/: arg.hpp  arg.ipp  arg.test.cpp  obj.hpp  obj.ipp  obj.test.cpp  ptr.hpp  ptr.test.cpp
ffiapi-v1-imp/: Cargo.toml
ffiapi-v1-imp/src/: lib.rs  obj.rs
generate-ffiapi-v1/: Cargo.toml  askama.toml
generate-ffiapi-v1/src/: acesu.api  ast.rs  grammar.pest  grammar.rs  main.rs  parse.rs  templates.rs
generate-ffiapi-v1/src/parse/: assertions.rs  generic.rs  parse_error.rs  parse_result.rs
generate-ffiapi-v1/templates/cpp-api/: api.hpp.in  common.hpp.in  module-ffi.ipp.in  module-impl-prefix.ipp.in  module-impl-suffix.ipp.in  module.hpp.in
generate-ffiapi-v1/templates/cpp-api/module/: command.hpp.in  error.hpp.in  event.hpp.in  interface-ffi.hpp.in  interface-impl.hpp.in  interface.hpp.in
generate-ffiapi-v1/templates/cpp-api/module/interface/: ctor-ffi.hpp.in  ctor-impl.hpp.in  ctor.hpp.in  dtor-ffi.hpp.in  dtor-impl.hpp.in  dtor.hpp.in  method-ffi.hpp.in  method-impl.hpp.in  method.hpp.in
generate-ffiapi-v1/templates/rust-ffi-impl/: api.rs.in  module.rs.in
generate-ffiapi-v1/templates/rust-ffi-impl/module/interface/: ctor.rs.in
testing/: CMakeLists.txt
testing/ffiapi-testing/: CMakeLists.txt  ffiapi-testing.hpp
testing/simple-api/: CMakeLists.txt
testing/simple-api/simple/: ffi.hpp  thing.cpp  thing.hpp
testing/simple-imp/: CMakeLists.txt  Cargo.toml
testing/simple-imp/src/: lib.rs
testing/simple-test/: CMakeLists.txt  simple-test.cpp
