[package]
name = "generate-ffiapi-v1"
version = "0.0.0"
edition = "2021"

[dependencies]
askama = { version = "0.12" }
clap = { version = "4.5", features = ["derive"] }
derive-debug = { version = "0.1" }
log = { version = "0.4" }
env_logger = { version = "0.11", features = ["auto-color"] }
pest = { version = "2.7" }
pest_derive = { version = "2.7" }